--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -67,7 +67,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  width: 90%;
 }
 
 .btn {
@@ -87,6 +87,34 @@
   color:white;
   background-color: black;
 }
+
+.container{
+  display: flex;
+
+}
+
+.nav-panel{
+  width: 10%;
+  height: 500px;
+  top: 20%;
+  margin-left: 1rem;
+  padding: 1rem;
+  border-radius: 30px;
+  position: sticky;
+  background-color: black;
+  transition: 0.3s;
+}
+
+.section-text{
+  color: white;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.section-text:hover{
+  color:grey
+}
+
 
 .markdown-title{
   padding: 0 1rem; 
