--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -1,10 +1,15 @@
+body{
+  overflow-x: hidden;
+}
+
 .textarea {
+    font-family: Arial, Helvetica, sans-serif;
     display: block;
     width: 80%;
     overflow:auto;
     min-height: 5rem;
     line-height: 20px;
-    height:auto;
+    /*height:auto;*/
     resize: none;
     font-size: 1rem;
     border-radius: 20px;
@@ -34,6 +39,7 @@
 
 .titles{
   width: 50%;
+  min-height: 3rem;
   font-size: 2rem;
   font-weight: bold;
   border-radius: 20px;
@@ -43,6 +49,9 @@
   margin-bottom: 1rem;
   transition: 0.5s;
   outline: none;
+  white-space: normal; 
+  resize: none;
+  overflow: hidden;
 }
 
 .titles:focus {
@@ -53,6 +62,10 @@
 
 
 .results{
+  font-family: Arial, Helvetica, sans-serif;
+  display: block;
+  min-height: 5rem;
+  line-height: 20px;
   background-color: white;
   width: 80%;
   font-size: 1rem;
@@ -60,14 +73,16 @@
   padding: 20px 20px;
   overflow-wrap: break-word;
   border: 0.3rem solid black;
-
 }
+
+
 
 .board {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding-left: 100px;
 }
 
 .btn {
@@ -90,20 +105,22 @@
 
 .container{
   display: flex;
-
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .nav-panel{
   white-space: nowrap;
   width: 0;
-  height: 500px;
-  top: 20%;
-  margin-left: 1rem;
+  min-width: 0;
+  height: 700px;
+  top: 15%;
+  margin-left: -100px;
   padding: 0;
   border-radius: 30px;
   position: sticky;
   background-color: black;
-  transition: 0.3s;
+  transition: 0.4s;
 }
 
 
@@ -123,9 +140,21 @@
   padding: 0 1rem; 
 }
 
+.mode-title{
+  padding: 0.5rem 1rem; 
+  color: white;
+  background-color: black;
+  width: 15%;
+  border-radius: 30px;
+  text-align: center;
+}
+
 .back-btn{
   color:white;
   cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 50%;
 }
 
 .tool-bar{
@@ -148,4 +177,8 @@
   transition: 0.3s;
   transform-origin: center;
   user-select: none;
+}
+
+.test{
+  height: 0;
 }
