--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -37,6 +37,8 @@ body{
     border-radius: 20px;
     padding: 2rem;
     transition: 0.3s;
+    margin-left: -50px;
+    
   }
 
 
@@ -85,8 +87,8 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  padding-left: 8%;
+  width: 100vw;
+  padding-left: 5%;
 }
 
 .btn {
@@ -117,9 +119,12 @@ body{
 }
 
 .container{
+  width: 100%;
+  
   display: flex;
   box-sizing: border-box;
-
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -129,7 +134,8 @@ body{
   min-width: 0;
   height: 700px;
   top: 15%;
-  margin-left: -100px;
+  /*margin-left: -100px;*/
+  transform: translateX(-100px);
   padding: 0;
   border-radius: 30px;
   position: sticky;
