--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -31,7 +31,7 @@ body{
     background-color: white;
     border: 0.5rem solid gray;
     margin-bottom: 3rem;
-    width: 80vw;
+    width: 85%;
     display: flex;
     flex-direction: column;
     border-radius: 20px;
@@ -88,7 +88,8 @@ body{
   flex-direction: column;
   align-items: center;
   width: 100vw;
-  padding-left: 5%;
+  flex-shrink: 0;
+  transition: 0.3s;
 }
 
 .btn {
@@ -119,12 +120,13 @@ body{
 }
 
 .container{
-  width: 100%;
-  
   display: flex;
+  justify-content: space-between;
   box-sizing: border-box;
+  width: 100vw;
   margin: 0;
   padding: 0;
+  overflow-anchor: none
 }
 
 
@@ -137,10 +139,14 @@ body{
   /*margin-left: -100px;*/
   transform: translateX(-100px);
   padding: 0;
+  margin: 0;
   border-radius: 30px;
   position: sticky;
   background-color: black;
   transition: 0.4s;
+  flex-shrink: 0;
+  flex-grow: 0;
+
 }
 
 
@@ -201,4 +207,23 @@ body{
 
 .test{
   height: 0;
+}
+
+
+
+.right{
+  background-color: rebeccapurple;
+  width: 0;
+  flex-shrink: 0;
+  flex-grow: 0;
+  transition: 0.3s;
+  height: 900px;
+  position: sticky;
+  border-radius: 30px;
+  top: 5%;
+}
+
+.right-btn{
+  z-index: 999;
+  cursor: pointer;
 }
