--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -212,7 +212,7 @@ body{
 
 
 .right{
-  background-color: rebeccapurple;
+  background-color: white;
   width: 0;
   flex-shrink: 0;
   flex-grow: 0;
@@ -220,10 +220,38 @@ body{
   height: 900px;
   position: sticky;
   border-radius: 30px;
-  top: 5%;
+  top: 6%;
+  box-shadow: 5px 5px 20px;
+  text-align: center;
+
 }
+
+
+.edit-panel-title{
+
+}
+
 
 .right-btn{
   z-index: 999;
   cursor: pointer;
+}
+
+.textareaRight{
+  font-family: Arial, Helvetica, sans-serif;
+  display: block;
+  width: 85%;
+  overflow:auto;
+  height: 80%;
+  max-height: 80%;
+  margin-left: 2rem;
+  line-height: 20px;
+  /*height:auto;*/
+  resize: none;
+  font-size: 1rem;
+  border-radius: 20px;
+  padding: 20px 20px;
+  padding-bottom: 0;
+  border: 0.3rem solid black;
+  transition: 0.5s;
 }
