--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -229,7 +229,7 @@ body{
 
 
 .edit-panel-title{
-
+  margin-left: 25%;
 }
 
 
@@ -275,4 +275,23 @@ body{
   -10px -5px 7px rgb(211, 211, 211) inset, 
   10px 5px 7px rgb(241, 241, 241) inset;
 
+}
+
+.right-title-container{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 10%;
+}
+
+.right-back-btn{
+  width: 3rem;
+  height: 50%;
+  font-size: 2rem;
+  font-weight: bold;
+  border-radius: 40px;
+  margin-left: 3rem;
+  background-color: white;
+  border: none;
+  cursor: pointer;
 }
