--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -229,7 +229,7 @@ body{
 
 
 .edit-panel-title{
-  margin-left: 25%;
+  margin-left: 35%;
 }
 
 
@@ -242,7 +242,7 @@ body{
   background: rgb(247, 247, 247);
   font-family: Arial, Helvetica, sans-serif;
   display: block;
-  width: 85%;
+  width: 41rem;
   overflow:auto;
   height: 80%;
   max-height: 80%;
@@ -282,6 +282,7 @@ body{
   justify-content: start;
   align-items: center;
   height: 10%;
+  width: 30vw;
 }
 
 .right-back-btn{
