--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -88,13 +88,13 @@ html {
   min-height: 5rem;
   line-height: 20px;
   background-color: white;
-  width: 80%;
+  width: 95%;
   font-size: 1rem;
   border-radius: 20px;
   padding: 20px 20px;
   overflow-wrap: break-word;
-  border: 5px solid black;
-  /*box-shadow: 10px 5px 10px rgb(203, 203, 203);*/
+  border: 5px solid transparent;
+  box-shadow: 0px 0px 10px rgb(204, 204, 204);
   margin-top: 1rem;
 }
 
@@ -153,7 +153,7 @@ html {
   width: 0;
   min-width: 0;
   height: 600px;
-  top: 12%;
+  top: 15%;
   /*margin-left: -100px;*/
   transform: translateX(-100px);
   padding: 0;
@@ -241,8 +241,8 @@ html {
   height: 800px;
   position: sticky;
   border-radius: 30px;
-  top: 12%;
-  box-shadow: 5px 2px 10px;
+  top: 15%;
+  box-shadow: 5px 2px 10px 1px rgb(180, 180, 180);
   text-align: center;
   overflow: hidden;
 
@@ -250,7 +250,8 @@ html {
 
 
 .edit-panel-title{
-  margin-left: 35%;
+  margin-left: 25%;
+  width: 10rem;
 }
 
 
@@ -319,9 +320,10 @@ html {
 }
 
 pre{
-  background-color: rgb(227, 226, 226);
-  padding: 1rem 1rem;
+  /*background-color: rgb(243, 243, 243);*/
   border-radius: 10px;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-bar{
@@ -407,7 +409,31 @@ pre{
 }
 
 .doc-title{
-  color:white
+  color:white;
+  width: 20%;
+  font-size: 200%;
+  margin-left: auto;
+  border-radius: 10px;
+  border: 1px solid transparent;
+  background-color: transparent;
+}
+
+
+.code-highlighter{
+  margin: 0;
+  padding: 0;
+}
+
+.language-tag{
+  position: absolute;
+  margin-top: -1em;
+  right: 2%;
+  background-color: black;
+  color: white;
+  padding: 0.5rem 2rem;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  font-size: 150%;
 }
 
 
