--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -334,6 +334,7 @@ pre{
   background-color: black;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   position: sticky;
   height: 3rem;
 }
@@ -345,7 +346,7 @@ pre{
 }
 
 .edit-btn{
-  margin-left: auto;
+ /* margin-left: auto;*/
   margin-right: 3rem;
   display: flex;
 }
@@ -412,7 +413,6 @@ pre{
   color:white;
   width: 20%;
   font-size: 200%;
-  margin-left: auto;
   border-radius: 10px;
   border: 1px solid transparent;
   background-color: transparent;
@@ -434,6 +434,10 @@ pre{
   border: 1px solid transparent;
   border-radius: 10px;
   font-size: 150%;
+}
+
+.nav-title-container{
+  display: flex;
 }
 
 
