--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,28 @@
   color: #61dafb;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgba(49, 49, 49); 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
