--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -42,6 +42,11 @@ html {
   }
 
 
+  .section-containers:first-child{
+    margin-top: 3rem;
+  }
+
+
   .section-containers{
     background-color: white;
     border: 5px solid black;
@@ -52,6 +57,7 @@ html {
     border-radius: 20px;
     padding: 2rem;
     transition: 0.3s;
+    position: relative;
   }
 
 
@@ -337,6 +343,7 @@ pre{
   justify-content: space-between;
   position: sticky;
   height: 3rem;
+  z-index: 999;
 }
 
 .title{
@@ -446,12 +453,18 @@ pre{
   position: absolute;
   background-color: black;
   width: 30rem;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
   height: 15rem;
   transform: translateX(-25rem);
-  border-radius: 20px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px ;
   border: 1px solid transparent;
-  overflow: scroll;
+  box-shadow: 0px 0px 15px rgb(29, 29, 29);
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y:auto; 
+  
+
 }
 
 .setting-title-field{
@@ -475,6 +488,7 @@ pre{
   margin: 0;
   padding: 0;
   display: flex;
+  height: 5rem;
 }
 
 .setting-panel-title{
@@ -487,7 +501,7 @@ pre{
 
 .close-setting-btn{
   margin-left: auto;
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 
@@ -504,6 +518,36 @@ pre{
   margin-top: 1rem;
   cursor: pointer;
 }
+
+
+.id-text{
+  margin-top: 0;
+  margin-left: -1rem;
+  background-color: rgb(47, 47, 47);
+  width: 70%;
+  padding-left: 1rem;
+  border-radius: 10px;
+}
+
+.move-btn{
+  position: absolute;
+  left: 0;
+  background-color: black;
+  color: white;
+  padding: 0 0.5rem;
+  border: 2px solid transparent;
+  border-radius: 10px;
+  transform: translateX(-20px);
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.move-btn:hover{
+  background-color: white;
+  color: black;
+  border-color: black;
+}
+
 
 
 @media only screen and (max-width: 600px) {
