--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -51,3 +51,137 @@
     padding: 0 1rem;
     font-size: 300%;
 }
+
+.nooto-head-bar{
+    display: flex;
+    justify-content: space-between;
+}
+
+h1.head-bar-items {
+    font-size: 200%;
+    padding: 0;
+    margin: 0.5rem 1.5rem;
+}
+
+.head-bar-btn{
+    border-radius: 20px;
+    border: 2px solid transparent;
+    padding: 0 1.5rem;
+    background-color: black;
+    color: white;
+    font-size: larger;
+    cursor: pointer;
+    transition: 0.3s ease-out;
+}
+
+.head-bar-btn:hover{
+    background-color: dodgerblue;
+}
+
+
+.head-bar-items{
+    margin: 0.5rem 1em;
+}
+
+.profile-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 1rem;
+}
+
+.header-section{
+    display: flex;
+    justify-content: space-between;
+}
+
+.profile-edit{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: auto;
+    color: white;
+    background-color: black;
+    position: absolute;
+    right: 0;
+    width: 25rem;
+    height: 20rem;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    transform: translateX(25rem);
+    transition: 0.3s ease-in-out;
+}
+
+.profile-container{
+    position: relative;
+    overflow: hidden;
+}
+
+
+.profile-edit-name{
+    color: white;
+    width: 80%;
+    height: 2rem;
+    padding: 0 0.5rem;
+    border-radius: 20px;
+    border: 2px solid transparent;
+    font-size: medium;
+    background-color: rgb(47, 47, 47);
+    transition: 0.3s ease-in;
+}
+
+.profile-edit-labels{
+    font-size: 150%;
+}
+
+.profile-edit-label-container{
+    width: 80%;
+    margin: 0.5rem 0;
+}
+
+.profile-edit-name:focus{
+    background-color: rgb(58, 58, 58);
+
+}
+
+.profile-edit-name-section{
+    margin-top: 1rem;
+    width: 80%;
+}
+
+.profile-edit-title{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.profile-update-btn{
+    border-radius: 10px;
+    border:2px solid transparent;
+    background-color: white;
+    color: black;
+    padding: 0 1rem;
+    font-size: larger;
+    cursor: pointer;
+    margin-top: 1rem;
+    transition: 0.3s;
+    margin-top: auto;
+    margin-bottom: 1rem;
+    transition: 0.3s ease-in;
+}
+
+.profile-update-btn:hover{
+    background-color: dodgerblue;
+    color: white;
+}
+
+
+.profile-edit-close-btn{
+    cursor: pointer;
+}
+
+
+
+
+
