--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -1,4 +1,7 @@
 body{
+  --btn-color: rgb(218, 218, 218);
+
+
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -6,6 +9,8 @@ body{
   overflow-y: auto;
   max-width: 100%;
   width: 100%;
+
+
 }
 
 html {
@@ -116,20 +121,26 @@ html {
   transition: 0.3s;
 }
 
-.btn {
+.right-active {
+  width: 60%;
+  margin-right: 0;
+}
+
+
+.block-btn {
   width: 10%;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 2rem;
   margin-top: 20px;
   border-radius: 20px;
   border: none;
   padding: 0.5rem;
   transition: 0.4s;
   background-color: rgb(218, 218, 218);
+  cursor: pointer;
 }
 
-.btn:hover {
-  cursor: pointer;
+.block-btn:hover {
   color:white;
   background-color: black;
 }
@@ -255,6 +266,15 @@ html {
 }
 
 
+.right.active{
+  width: 40vw;
+}
+
+.arrow-btn.active {
+  transform: rotateY(180deg);
+}
+
+
 .edit-panel-title{
   margin-left: 25%;
   width: 10rem;
@@ -362,6 +382,7 @@ pre{
 
 .arrow-btn{
   transition: 0.3s;
+  transform: rotateY(0deg);
 }
 
 .add-btn{
@@ -419,13 +440,20 @@ pre{
 }
 
 .doc-title{
-  color:white;
+  color:black;
   text-align: center;
   width: 20%;
-  font-size: 200%;
+  font-size: 250%;
   border-radius: 10px;
   border: 1px solid transparent;
   background-color: transparent;
+  margin: 1rem 0;
+  font-weight: bold;
+}
+
+.doc-title:disabled{
+  color:black;
+
 }
 
 
@@ -680,17 +708,55 @@ pre{
   margin: 0;
 }
 
+.section-control-container {
+  display: flex;
+  width: 60%;
+  justify-content: space-around;
+}
 
-@media only screen and (max-width: 600px) {
+.section-footer{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+}
+
+.section-btn {
+  width: 20%;
+  background-color: var(--btn-color);
+  border-radius: 20px;
+  border: 2px solid transparent;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: 0.3s ease-in;
+}
+
+.section-btn:hover {
+  color:white;
+  background-color: black;
+}
+
+
+
+@media only screen and (max-width: 765px) {
   .full{
     width: 100%;
   }
   
   .section-containers{
-    width: 70%;
+    width: 80%;
   }
   .footer{
     width: 20rem;
+  }
+
+  .board {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .right {
+    width: 0;
   }
 
 }
