--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -702,6 +702,7 @@ pre{
   background-color: rgb(29, 29, 29);
   border-radius: 10px;
   padding: 0 1rem;
+  position: relative;
 }
 
 .share-card:first-child {
@@ -734,6 +735,15 @@ pre{
 .section-btn:hover {
   color:white;
   background-color: black;
+}
+
+
+.share-card-del{
+  position: absolute;
+  color: palevioletred;
+  cursor: pointer;
+  right: 0;
+  margin-right: 1rem;
 }
 
 
