--- a/client/src/drawing.css
+++ b/client/src/drawing.css
@@ -1,6 +1,6 @@
 body{
   --btn-color: rgb(218, 218, 218);
-
+  --red: rgb(255, 72, 72);
 
   margin: 0;
   padding: 0;
@@ -375,14 +375,16 @@ pre{
 
 
 .edit-btn{
- /* margin-left: auto;*/
-  margin-right: 3rem;
+  margin-left: 0;
+  margin-right: 1rem;
   display: flex;
 }
 
 .arrow-btn{
   transition: 0.3s;
   transform: rotateY(0deg);
+  margin: 0;
+  padding: 0;
 }
 
 .add-btn{
@@ -479,6 +481,12 @@ pre{
   align-items: center;
 }
 
+.setting-icon{
+  cursor: pointer;
+  margin-right: 1rem;
+}
+
+
 .setting-panel-container{
   position: absolute;
   right: 0;
@@ -543,7 +551,7 @@ pre{
 
 
 .setting-delete-btn{
-  background-color: rgb(255, 72, 72);
+  background-color: var(--red);
   width: 20rem;
   border-radius: 10px;
   text-align: center;
@@ -740,10 +748,18 @@ pre{
 
 .share-card-del{
   position: absolute;
-  color: palevioletred;
+  color: var(--red);
   cursor: pointer;
   right: 0;
   margin-right: 1rem;
+}
+
+
+.view-only-text{
+  color: var(--red);
+  margin-right: 1rem;
+  font-size: 150%;
+  font-weight: 600;
 }
 
 
