--- a/client/src/profile.css
+++ b/client/src/profile.css
@@ -105,7 +105,8 @@ h1.head-bar-items {
 .profile-edit{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    padding-left: 2rem;
     overflow: auto;
     color: white;
     background-color: black;
@@ -126,7 +127,7 @@ h1.head-bar-items {
 
 .profile-edit-name{
     color: white;
-    width: 80%;
+    width: 90%;
     height: 2rem;
     padding: 0 0.5rem;
     border-radius: 20px;
@@ -138,6 +139,8 @@ h1.head-bar-items {
 
 .profile-edit-labels{
     font-size: 150%;
+    margin: 0;
+    padding: 0;
 }
 
 .profile-edit-label-container{
@@ -156,7 +159,7 @@ h1.head-bar-items {
 }
 
 .profile-edit-title{
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -169,7 +172,6 @@ h1.head-bar-items {
     cursor: pointer;
     margin-top: 1rem;
     transition: 0.3s;
-    margin-top: auto;
     margin-bottom: 1rem;
     transition: 0.3s ease-in;
 }
@@ -178,6 +180,7 @@ h1.head-bar-items {
 .profile-update-btn{
     background-color: white;
     color: black;
+    
 }
 
 .profile-update-btn:hover{
@@ -186,7 +189,7 @@ h1.head-bar-items {
 }
 
 .profile-delete-btn {
-    margin-top: 0;
+    margin-top: auto;
     background-color: rgb(255, 72, 72);
     color: black;
 }
@@ -194,6 +197,7 @@ h1.head-bar-items {
 
 .profile-edit-close-btn{
     cursor: pointer;
+    margin-right: 1rem;
 }
 
 
